--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Continuous integration
+name: continuous-integration
 
 on: [push, pull_request]
 
@@ -6,20 +6,25 @@ jobs:
   build_and_test:
     name: Build and test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        features:
+          - --all-features
+          - --no-default-features
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
     - name: Install toolchain
-      uses: actions-rs/toolchain@v1
+      uses: dtolnay/rust-toolchain@stable
       with:
-        profile: minimal
-        toolchain: stable
-        override: true
-    - name: Cargo check
-      uses: actions-rs/cargo@v1
-      with:
-        command: check
-    - name: Cargo build
-      uses: actions-rs/cargo@v1
-      with:
-        command: build
+        components: rustfmt
+    - name: Install protoc
+      run: sudo apt-get install protobuf-compiler
+    - name: Check formatting
+      run: cargo fmt --all -- --check
+    - name: Check
+      run: cargo check ${{ matrix.features }}
+    - name: Build
+      run: cargo build ${{ matrix.features }}
+    - name: Test
+      run: cargo test ${{ matrix.features }}
