--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.152", features = ["derive"] }
-serde_json = "1.0.91"
 rosm_pbf_reader = { git = "https://github.com/rosm-project/rosm_pbf_reader", version = "0.4" }
 rusqlite = { version = "0.28", features = ["bundled"] }
+toml = "0.7.1"
