Switch to rosm_pbf_reader v1.0.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.68"
 serde = { version = "1.0.152", features = ["derive"] }
-rosm_pbf_reader = { git = "https://github.com/rosm-project/rosm_pbf_reader", version = "0.4" }
+rosm_pbf_reader = "1.0.0"
 rusqlite = { version = "0.28", features = ["bundled"] }
 toml = "0.7.1"
